bin/testsuite/tests/compiler/src/errors/compiler268.swg
/*
#global testerror;
#import module267;*/
